force-app/main/default/objects/PromotionalProduct__c/PromotionalProduct__c.object-meta.xml
<CustomObject>
    <label>Promotional Product</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Promotional Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>